.happypack/s-819420028
SyntaxError: Unexpected token, expected , (29:34)

[0m [90m 27 | [39m            [36mreturn[39m $([32m'input[name="expiryMode"]:checked'[39m)[33m.[39mval() [33m===[39m [32m'days'[39m [33m&&[39m $([32m'input[name="deadlineType"]:checked'[39m)[33m.[39mval() [33m===[39m [32m'end_date'[39m [33m;[39m
 [90m 28 | [39m          }[33m,[39m
[31m[1m>[22m[39m[90m 29 | [39m          after_now_date[33m:[39m required[33m:[39m () [33m=>[39m {
 [90m    | [39m                                  [31m[1m^[22m[39m
 [90m 30 | [39m            console[33m.[39mlog($([32m'input[name="expiryMode"]:checked'[39m)[33m.[39mval() [33m===[39m [32m'days'[39m [33m&&[39m $([32m'input[name="deadlineType"]:checked'[39m)[33m.[39mval() [33m===[39m [32m'end_date'[39m )[33m;[39m
 [90m 31 | [39m            [36mreturn[39m $([32m'input[name="expiryMode"]:checked'[39m)[33m.[39mval() [33m===[39m [32m'days'[39m [33m&&[39m $([32m'input[name="deadlineType"]:checked'[39m)[33m.[39mval() [33m===[39m [32m'end_date'[39m [33m;[39m
 [90m 32 | [39m          }[33m,[39m[0m

BabelLoaderError: SyntaxError: Unexpected token, expected , (29:34)

[0m [90m 27 | [39m            [36mreturn[39m $([32m'input[name="expiryMode"]:checked'[39m)[33m.[39mval() [33m===[39m [32m'days'[39m [33m&&[39m $([32m'input[name="deadlineType"]:checked'[39m)[33m.[39mval() [33m===[39m [32m'end_date'[39m [33m;[39m
 [90m 28 | [39m          }[33m,[39m
[31m[1m>[22m[39m[90m 29 | [39m          after_now_date[33m:[39m required[33m:[39m () [33m=>[39m {
 [90m    | [39m                                  [31m[1m^[22m[39m
 [90m 30 | [39m            console[33m.[39mlog($([32m'input[name="expiryMode"]:checked'[39m)[33m.[39mval() [33m===[39m [32m'days'[39m [33m&&[39m $([32m'input[name="deadlineType"]:checked'[39m)[33m.[39mval() [33m===[39m [32m'end_date'[39m )[33m;[39m
 [90m 31 | [39m            [36mreturn[39m $([32m'input[name="expiryMode"]:checked'[39m)[33m.[39mval() [33m===[39m [32m'days'[39m [33m&&[39m $([32m'input[name="deadlineType"]:checked'[39m)[33m.[39mval() [33m===[39m [32m'end_date'[39m [33m;[39m
 [90m 32 | [39m          }[33m,[39m[0m

    at transpile (/Users/kz/projects/edusoho/node_modules/.6.2.10@babel-loader/lib/index.js:52:13)
    at Object.module.exports (/Users/kz/projects/edusoho/node_modules/.6.2.10@babel-loader/lib/index.js:133:12)
    at applySyncOrAsync (/Users/kz/projects/edusoho/node_modules/.3.0.2@happypack/lib/applyLoaders.js:341:21)
    at apply (/Users/kz/projects/edusoho/node_modules/.3.0.2@happypack/lib/applyLoaders.js:268:5)
    at /Users/kz/projects/edusoho/node_modules/.3.0.2@happypack/lib/applyLoaders.js:131:7
    at applyPitchLoader (/Users/kz/projects/edusoho/node_modules/.3.0.2@happypack/lib/applyLoaders.js:184:14)
    at applyPitchLoader (/Users/kz/projects/edusoho/node_modules/.3.0.2@happypack/lib/applyLoaders.js:192:14)
    at applyPitchLoaders (/Users/kz/projects/edusoho/node_modules/.3.0.2@happypack/lib/applyLoaders.js:222:4)
    at applyLoaders (/Users/kz/projects/edusoho/node_modules/.3.0.2@happypack/lib/applyLoaders.js:116:3)
    at HappyWorker.compile (/Users/kz/projects/edusoho/node_modules/.3.0.2@happypack/lib/HappyWorker.js:32:3)
    at Object.HappyForegroundThreadPool.compile (/Users/kz/projects/edusoho/node_modules/.3.0.2@happypack/lib/HappyForegroundThreadPool.js:61:14)
    at HappyPlugin.compileAndUpdateCache (/Users/kz/projects/edusoho/node_modules/.3.0.2@happypack/lib/HappyPlugin.js:345:14)
    at HappyPlugin.compileInForeground (/Users/kz/projects/edusoho/node_modules/.3.0.2@happypack/lib/HappyPlugin.js:320:25)
    at HappyPlugin.compile (/Users/kz/projects/edusoho/node_modules/.3.0.2@happypack/lib/HappyPlugin.js:236:32)
    at Object.HappyLoader (/Users/kz/projects/edusoho/node_modules/.3.0.2@happypack/lib/HappyLoader.js:34:15)
    at WEBPACK_CORE_LOADER_EXECUTION (/Users/kz/projects/edusoho/node_modules/.0.6.9@webpack-core/lib/NormalModuleMixin.js:155:71)